--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "demo-cloud-sdk",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
@@ -14,5 +18,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
